--- a/apitest/src/main/resources/preReg/GetAllPreRegApplications/GetAllPreRegApplications.yml
+++ b/apitest/src/main/resources/preReg/GetAllPreRegApplications/GetAllPreRegApplications.yml
@@ -13,7 +13,7 @@ GetAllPreRegApplications:
 }'
    Prereg_GetAllPreRegApplications_LOST_UIN_APPLICATION_sid:
       endPoint: /preregistration/v1/applications
-      description: Retrieve all preregistered applications with a preregistration ID associated with the lost UIN application
+      description: Retrieve all preregistered applications with a prereg ID associated with the lost UIN application
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
@@ -25,7 +25,7 @@ GetAllPreRegApplications:
 }'
    Prereg_GetAllPreRegApplications_DELETE_UIN_APPLICATION_sid:
       endPoint: /preregistration/v1/applications
-      description: Retrieve all preregistered applications with a preregistration ID associated with a deleted UIN application
+      description: Retrieve all preregistered applications with a prereg ID associated with a deleted UIN application
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
