--- a/apitest/src/main/resources/preReg/UpdatePreRegStatus/updatePreRegStatus.yml
+++ b/apitest/src/main/resources/preReg/UpdatePreRegStatus/updatePreRegStatus.yml
@@ -1,7 +1,7 @@
 UpdatePreRegStatus:
    Prereg_UpdatePreRegStatus_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
-      description: Update the status of an application to 'Pending Appointment' using the preregistration ID and status code 
+      description: Update the status of an application to 'Pending Appointment' using the prereg ID and status code 
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
@@ -15,7 +15,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_for_expired_testcase_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
-      description: Update the status of the expired test case application using the preregistration ID and status code     
+      description: Update the status of the expired test case application using the prereg ID and status code     
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
@@ -43,7 +43,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
-      description: Update the application status to 'Pending Appointment' using the preregistration ID and status code 
+      description: Update the application status to 'Pending Appointment' using the prereg ID and status code 
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
@@ -57,7 +57,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_CA_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
-      description:  Update the status of an application to 'Pending Appointment' for canceling using the preregistration ID and status code 
+      description: Update the status of an application to'Pending Appointment'for canceling using the prereg ID and status code 
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
@@ -71,7 +71,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_Smoke_alldel_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
-      description: Update the status of an application to 'pending  Appointment' for deleted the preregistration ID and status code 
+      description: Update the status of an application to 'pending  Appointment' for deleted the prereg ID and status code 
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
@@ -99,7 +99,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_Smoke_CancelApplicationsAppointment_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
-      description: Update the status of an application to 'cancell application Appointment' using the preregistration ID and status code
+      description: Update the status of an application to'cancell application Appointment'using the prereg ID and status code
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: get
