--- a/apitest/src/main/resources/preReg/CopyDocument/CopyDocument.yml
+++ b/apitest/src/main/resources/preReg/CopyDocument/CopyDocument.yml
@@ -34,6 +34,7 @@ CopyDocument:
 }'
    Prereg_CopyDocument_blank_doc_cat_code_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}?catCode={doc_cat_code}&sourcePreId={preRegistrationId}
+      description: Copy the blank document and categorize it with the code
       role: batch
       restMethod: put
       inputTemplate: preReg/CopyDocument/copyDocument
