--- a/pre-registration/pre-registration-batchjob/pom.xml
+++ b/pre-registration/pre-registration-batchjob/pom.xml
@@ -7,12 +7,12 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
+		<version>1.3.0-B1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>pre-registration-batchjob</artifactId>
 	<name>pre-registration-batchjob</name>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.3.0-B1-SNAPSHOT</version>
 	<url>http://maven.apache.org</url>
 
 	<properties>
