--- a/apitest/src/main/resources/preReg/bookAppointment/bookAppointment.yml
+++ b/apitest/src/main/resources/preReg/bookAppointment/bookAppointment.yml
@@ -613,7 +613,7 @@ BookAppointment:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_CORE_REQ_013"
+      "errorCode": "PRG_BOOK_RCI_002"
       
     }
   ]
